--- a/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -38,13 +38,13 @@ cc: site.cc-by-nc-sa
 
 以下，我將從兩個面向，來說明我所認識的多元主義，即：制度論和認識論。
 
-制度上的多元主義與一系列社會哲學形成對比，那些哲學可能被描述爲「一元論」（monist，我在一篇相關文章中調侃地稱這些爲 [ALONE：原子化自由主義與客觀主義的天真認識論](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)）。一元論哲學傾向於關注孤立的個體和 / 或這些個體所處的統一 / 普遍結構。
+制度上的多元主義與一系列社會哲學形成對比，那些哲學可能被描述爲「一元論」（monist，我在一篇相關文章中調侃地稱這些爲 [ALONE：原子化自由主義與客觀主義的天真認識論](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)）。一元論哲學傾向於關注孤立的個體和／或這些個體所處的統一／普遍結構。
 
 以孤立的個人為前提的原子主義意識形態，經常被用來為資本主義辯護，因爲它既強調群體又強調個人。然而，對於制度多元主義來說，群體並不僅僅是個人利益的載體，而是具有其存在基本意義的根本價值。
 
-與此同時，以單一或普遍結構爲前提的集中主義（centralistic）意識形態，經常被用來替民粹主義的國家主義和民族主義辯護。相反，制度多元主義否認任何一個團體 / 集體（如民族國家、普世人權等）的中心地位。
+與此同時，以單一或普遍結構爲前提的集中主義（centralistic）意識形態，經常被用來替民粹主義的國家主義和民族主義辯護。相反，制度多元主義否認任何一個團體／集體（如民族國家、普世人權等）的中心地位。
 
-認識論多元主義與那些尋求一致、共通性的認知傳統（最顯著的是技術官僚主義、又稱專家主義 technocracy）形成了強烈對比。它通過否認任何單一的理性邏輯或功績主義（meritocratic）方案可作為社會秩序的最優解來做到這一點。
+認識論多元主義與那些尋求一致、共通性的認知傳統（最顯著的是技術官僚主義、又稱專家主義 technocracy）形成了強烈對比。它通過否認任何單一的理性邏輯或功績主義（meritocratic）方案可作為社會秩序的最佳解，來做到這一點。
 
 認識論多元主義重視多樣性，強調這些互不通約的集體實體與知識文化共聯的重要——彼此相互交織且協作，有異而共存。
 
@@ -58,7 +58,7 @@ cc: site.cc-by-nc-sa
 
 2. 其次是「自治」（self-government）或「民主」（democracy），即我認為多元群體需要對組成他們的個人負責，但不能把這些個人置於群體的基本意義之上，這一點是非常重要的；這與反動思想（如法西斯主義和社團主義（corporatism））形成對比，後者所意指的團體通常帶有專制、個人主義和等級結構。
 
-3. 最後一個元素被稱爲「合作」（cooperation），即我們應以合作做為目標，在社會群體中為共同的目標達成大致性的一致 / 共識（coherence/consensus），這也與許多後現代主義、相對主義和虛無主義形成了對比。
+3. 最後一個元素被稱爲「合作」（cooperation），即我們應以合作做為目標，在社會群體中為共同的目標達成大致性的一致／共識（coherence/consensus），這也與許多後現代主義、相對主義和虛無主義形成了對比。
 
 因此，可以說我是「合作式自由民主多元宇宙人」，但中間的兩個名詞具有相當多的含義，所以我使用了較簡潔的名詞做表示，希望這樣的補充已經足夠。[^4]
 
@@ -78,7 +78,7 @@ cc: site.cc-by-nc-sa
 
 2. 「聯合」（Consociational）政權，明確代表著其沿著歷史上形成的分歧（無論是政治、種族還是語言）平衡權力，舉例如：比利時和瑞士（語言分歧），阿比（Abiy）上臺前的埃塞俄比亞（種族分歧），南非（種族分歧）以及哥倫比亞和荷蘭（政治分歧）。或許最廣為人知的是：「教派」（confessional）聯合政權，所有的權利職位都依據憲法規定, 基於教派團體分配，制衡機制亦鼓勵跨教派合作以實現政治目的。黎巴嫩、伊拉克和北愛爾蘭是主要例子。
 
-3. 社團主義政治理論（corporatist political theory）也強調「多元」，意指伴隨著物質 / 產業範疇 / 職業經驗 / 專業知識 / 興趣等不同而生出的多元制度。此一思想深深紮根於古典（如柏拉圖）和宗教（如天主教社會思想）的政治理論中，影響了各種政治制度，例如從德國企業共同決策方案到愛爾蘭參議院。然而，在二十世紀上半葉，它們可能是最野心勃勃的嘗試，也與法西斯主義和受法西斯主義激勵的政府密切相關。社會科學家吉尼（Corrado Gini）因其提出的吉尼係數研究聞名於世，他領導設計了一種功能代表制，主要按行業和生產要素劃分權力，在墨索里尼的統治下取代了國家議會。
+3. 社團主義政治理論（corporatist political theory）也強調「多元」，意指伴隨著物質／產業範疇／職業經驗／專業知識／興趣等不同而生出的多元制度。此一思想深深紮根於古典（如柏拉圖）和宗教（如天主教社會思想）的政治理論中，影響了各種政治制度，例如從德國企業共同決策方案到愛爾蘭參議院。然而，在二十世紀上半葉，它們可能是最野心勃勃的嘗試，也與法西斯主義和受法西斯主義激勵的政府密切相關。社會科學家吉尼（Corrado Gini）因其提出的吉尼係數研究聞名於世，他領導設計了一種功能代表制，主要按行業和生產要素劃分權力，在墨索里尼的統治下取代了國家議會。
 
 4. 大多數現行的國際組織和聯盟（如聯合國和歐盟）根據不同的原則將組成國的代表權結合起來，這些原則包括：基本人口代表權、組成國代表權、連接它們的民間團體代表權等。例如，歐盟有一個大致基於人口比例代表制的議會，一個主要基於國家代表制的理事會，以及一系列社會、公民和利益團體的正式代表機構參與。這些力量共存於一套豐富的制衡機制中。
 
@@ -112,7 +112,7 @@ cc: site.cc-by-nc-sa
 
 3. **學術領域**：學術領域——至少在廣義的科學領域中，人們普遍想方設法用某種普遍的「科學方法」來追求某種絕對的真理概念。然而在實踐中，領域和其次領域（和次次領域！）通常建立在相互不一致的前提之上。
 
-   讓我特別說明一些我在學術領域工作上，與這些密切相關的案例。經濟學建立在私人物品的稀缺性、理性和方法論 / 制度個人主義之上；社會學則建立在集體物品、符號學和方法論 / 制度集體主義之上。在經濟學中，公共財政領域基本上排除了市場力量存在的可能，而產業組織領域則排除了不平等和一般均衡。
+   讓我特別說明一些我在學術領域工作上，與這些密切相關的案例。經濟學建立在私人物品的稀缺性、理性和方法論／制度個人主義之上；社會學則建立在集體物品、符號學和方法論／制度集體主義之上。在經濟學中，公共財政領域基本上排除了市場力量存在的可能，而產業組織領域則排除了不平等和一般均衡。
 
    雖然這確實可做為打通領域和次領域的嘗試，但它們在任何時候都只佔總體活動的一小部分，而且資金不足；最重要的是，其結果通常不是取代相關領域，而是再誕生一個新的領域或子領域（例如，資料科學來自統計學和計算機科學，行為經濟學來自經濟學和心理學）。同時，學術界對實務界的大多數重大影響（或者至少是那些得到了歷史的大方接受的）都需要跨領域的合作和同意（例如，網際網路和個人電腦的誕生、應對流行病的最有效對應等）。
 
@@ -130,7 +130,7 @@ cc: site.cc-by-nc-sa
 
 第三，也是最根本的一點，幾乎可以肯定不存在獨立於語境的最佳方案，因此，任何甚至只是近似的最佳方案都會涉及至少某種程度的語言多元化，儘管它可能不會像目前的語言之間互不理解。
 
-透過以上來看，「理性的」或近似最優語言幾乎是不可想像的，為數不多的試圖實現這一個目標（例如世界語，Esperanto，我曾經講過這個語言，而且相當熱衷於此），而無論是在實際採用的程度，還是在實現任何類似於證明最優或僅僅優於現有語言而被廣泛接受的程度，都僅取得了有限的成功。
+透過以上來看，「理性的」或近似最佳的語言，幾乎是不可想像的，為數不多的試圖實現這一個目標（例如世界語，Esperanto，我曾經講過這個語言，而且相當熱衷於此），而無論是在實際採用的程度，還是在實現任何類似於證明最佳，或僅僅比現行語言更好而被廣泛接受的程度，都僅取得了有限的成功。
 
 再來看理性主義的科學傳統，它使得科學知識的統一看來不像前兩個例子那麼顯而易見的不合調，但我相信很大程度上這只是一種幻覺，所有阻止語言或宗教統一的因素，在學術研究領域都更加強烈。
 
@@ -144,21 +144,21 @@ cc: site.cc-by-nc-sa
 
 行文至此，多元制度和多元認識論的相似之處，希望已經浮現各位眼前。爲了突出它們的相似性，我將提出一套適用於這兩者的原則。
 
-1. **承認原則（Recognition）**：認可（形式上或智識上）社會團體 / 思想流派，並給予它們超越成員 / 個人思想之和的認識論或機構制度的定位。
+1. **承認原則（Recognition）**：認可（形式上或智識上）社會團體／思想流派，並給予它們超越成員／個人思想之和的認識論或機構制度的定位。
 
-2. **輔助原則（Subsidiarity）**：主要涉及某類社會群體、或其成員、或其關注的思想活動和議題，應當被委託給該群體的集體主導團或知識權威，而不是由更大型、或高層次的組織掌控或分析（analysis）來制定規則。同時，範圍更廣的組織 / 分析在很大程度上，關注狹義的組織 / 分析之間的互動，而不是直接關注其行為 / 具體分析。
+2. **輔助原則（Subsidiarity）**：主要涉及某類社會群體、或其成員、或其關注的思想活動和議題，應當被委託給該群體的集體主導團或知識權威，而不是由更大型、或高層次的組織掌控或分析（analysis）來制定規則。同時，範圍更廣的組織／分析在很大程度上，關注狹義的組織／分析之間的互動，而不是直接關注其行為／具體分析。
 
-3. **中立原則（Neutrality)**：一套可被廣義族群接受的正式規則（Formalisms）和分析實踐，應該支配著社會群體 / 分析領域（包含個人）之間的互動，因為這樣，所以人會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏向某個群體 / 領域。
+3. **中立原則（Neutrality)**：一套可被廣義族群接受的正式規則（Formalisms）和分析實踐，應該支配著社會群體／分析領域（包含個人）之間的互動，因為這樣，所以人會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏向某個群體／領域。
 
 4. **CAD 原則（Cooperation across diversity，跨越多樣性的合作）**：在一系列社會群體中（多層次）廣泛受到認可的行動和觀點，應該得到更多的信任，即使它的平均個人認可程度並沒有比較高。
 
 5. **適應原則（Adaptation）**：哪些群體和領域獲得認可，應該適應群體的自然變化。作為對社會、知識交流的重要因子，鼓勵社會親和力（social affinity）與智識開啟的新模式，新群體、新領域的動態形成，應作為社會系統的目標。
 
-大多數的原則是不言自明的，已出現在許多多元主義論述中。暫且不論它們有何不同，較有爭議的可能是 3、5 兩點。在某些的多元主義思想 / 應用中，中立性並非一個標準，其對一些社會群體採取容忍的態度、而非平等。
+大多數的原則是不言自明的，已出現在許多多元主義論述中。暫且不論它們有何不同，較有爭議的可能是 3、5 兩點。在某些的多元主義思想／應用中，中立性並非一個標準，其對一些社會群體採取容忍的態度、而非平等。
 
 我並不特別注重這樣的想法，因爲一旦有了中立的正式規則，要將哪些部分排除在多元主義的概念之外是可預見的。因此，站在我的角度，核心任務將是：確立中立的多元主義正式規則，由那些應用它的人，來決定哪些形式的差異是合適的。
 
-也許大多數的多元主義哲學 / 制度（尤其是那些具有保守傾向的制度）會傾向於拒絕適應，只持續關注某些固定的社會群體。雖然這似乎讓我和大多數的多元論者看來不太一致，但在我看來，若多元主義要能回應上面討論的批評者，並在面對其他更有活力的社會哲學時生存下去，這與其說是一種設計考量，不如說是必要條件。
+也許大多數的多元主義哲學／制度（尤其是那些具有保守傾向的制度）會傾向於拒絕適應，只持續關注某些固定的社會群體。雖然這似乎讓我和大多數的多元論者看來不太一致，但在我看來，若多元主義要能回應上面討論的批評者，並在面對其他更有活力的社會哲學時生存下去，這與其說是一種設計考量，不如說是必要條件。
 
 因此，這些標準，儘管與其他多元主義哲學不同，但對於回答上述對多元主義提出的存在問題是必要的。
 
@@ -166,7 +166,7 @@ cc: site.cc-by-nc-sa
 
 如此一來問題出現了，多元思維是否能支持多元制度？多元思維是否太過寬廣而不一致，以至於無法支持多元制度設計？我將試著說明爲什麼可行的原因，並展示一系列關於多元制度設計觀點的趨同性作為說明。我想從上述原則中挑出一個，即 CAD（跨越多樣性的合作），並說明多元思維如何支持它。
 
-因為這篇文章，主要是為了啟發與說服正式技術專家，因此我將把重點更多的放在形式模型上，作為結構化制度的理由 / 衍生的方式，而不會涉及全面的形式分析。
+因為這篇文章，主要是為了啟發與說服正式技術專家，因此我將把重點更多的放在形式模型上，作為結構化制度的理由／衍生的方式，而不會涉及全面的形式分析。
 
 我將表明，關於社會結構的高度簡化和不可信的假設（即使是典型的一元論模型和結論的最有力的提倡者也會同意這只是簡化）一旦得到拓展，就將傾向於以合理趨同化的形式支持上文討論的多元制度。為此，我將重點介紹七個案例，這些案例說明並非詳盡無遺，但希望能有代表性。
 
@@ -180,7 +180,7 @@ cc: site.cc-by-nc-sa
 
    雖然精確的最佳估計量取決於統計依賴性的精確結構，但存在一個強大而直接的統計直覺，比起那些具有相關錯誤的信號，應該給予相對獨立的信號的積累更大的權重。
 
-   此一原則在科學哲學中常被稱爲「跨界一致性」（consilience）。它表明，比起個人可信度的任何對稱 / 交換函數，由社會上不同的群體支持故而不太可能互相串謀的行動方案，應該得到更大的相對可信度。這傾向於支持跨越差異的合作原則。
+   此一原則在科學哲學中常被稱爲「跨界一致性」（consilience）。它表明，比起個人可信度的任何對稱／交換函數，由社會上不同的群體支持故而不太可能互相串謀的行動方案，應該得到更大的相對可信度。這傾向於支持跨越差異的合作原則。
 
    它也與中立性大體一致，因為即使對精確性沒有特別看法，似乎也能對關聯結構有合理的、廣泛的社會共識。最後，它似乎相當具備可適應性，正因為它是基於一般常態的統計性質，而不是基於被視為不可改變的特定歷史環境。
 
@@ -194,7 +194,7 @@ cc: site.cc-by-nc-sa
 
    在這種情況下，平衡各黨派和團體的有效投票權將比簡單的平方根規則所暗示的要複雜得多，但可能會遵循類似的性質模式。因此，與社會上非常不相關的群體的投票相比，緊密相關的群體的投票應該相對於人口規模被降低權重，這使得比起支持者的人口規模，具有社會廣泛支持的選擇的力量則會被相對放大。
 
-3. **博弈與激勵理論**：我的學術背景主要是建立在博弈論基礎上的機制設計。大多數機制設計是以個人的自利爲前提，以貨幣等價物爲單位。平方投票（Quadratic Voting，QV）是基於這種論述的大群體之間近似最優的集體決策程序。
+3. **博弈與激勵理論**：我的學術背景主要是建立在博弈論基礎上的機制設計。大多數機制設計是以個人的自利爲前提，以貨幣等價物爲單位。平方投票（Quadratic Voting，QV）是基於這種論述的大型群體之間，近似最適的集體決策程序。
 
    在該程序中，個人使用某種貨幣（通常是平均分配的話語權，voice credits）來表達對各種提議或候選人的同意或反對。然而，收到的總支持並非個人貢獻的線性總和，還增加了「互動」成分，因此，眾人的有限貢獻，比單人的巨大貢獻更有力量。
 
@@ -202,17 +202,17 @@ cc: site.cc-by-nc-sa
 
    然而，原子化的個人自利假設通常被理解爲「狹隘」的。社會關係密切的個人往往對彼此的利益有著利他主義的關注，而這種關注可以直接解決搭便車的問題。若沒有考慮到這一點，會導致 QV「過度解決」（oversolve）的情況，使結果過於偏向關聯群體。
 
-   [Buterin (2019)](https://ethresear.ch/t/pairwise-coordination-subsidies-a-new-quadratic-funding-design/5553) 表明，如果縮減與具有利他主義的群體（可由他們在機制中的行動所揭示）之間的互動有關的平方項，就可以克服這個問題。這也說明了，在根據相關個體的社會親密度，通過結合線性和平方項的程序，近似最優的投票機制是可能的。
+   [Buterin (2019)](https://ethresear.ch/t/pairwise-coordination-subsidies-a-new-quadratic-funding-design/5553) 表明，如果縮減與具有利他主義的群體（可由他們在機制中的行動所揭示）之間的互動有關的平方項，就可以克服這個問題。這也說明了，在根據相關個體的社會親密度，通過結合線性和平方項的程序，近似最適的投票機制是可能的。
 
    這傾向於支持多樣性，因為社會距離較遠的個人之間的互動項將被保留，而社會距離較近的個人之間的互動項則被抵消，從而允許具有社會多樣性支持的專案，戰勝具有更多同質化支持的專案。
 
 4. **一般均衡經濟學**：從整體上理解經濟的典型框架是「全面均衡」。一般均衡理論表明，在某些條件下，具有適當稟賦效應的資本主義經濟，會產生所有理想的結果。
 
-   然而，有兩個關鍵條件：所有商品都是私人的（由一個人消費）；這些商品的生產表現出「報酬遞減」（由一組資源聯合生產的數量最多是由每個人單獨行動所能生產的之和）。
+   然而，有兩個關鍵條件：所有商品都是私人的（僅由單人消費）、這些商品的生產表現出「報酬遞減」（由一組資源聯合生產的數量，不會超過由各個單獨生產者之和）。
 
-   這些條件排除了大多數與現代社會相關的現象，如技術創新、網路效應、基礎設施、城市等。Groves 和 Ledyard（1977）表明，一個簡單的、全球性的公共產品可以被添加到這個設定中，並使用像 QV 這樣的二次方機制來保持最優性。
+   這些條件排除了大多數與現代社會相關的現象，如技術創新、網路效應、基礎設施、城市等。Groves 和 Ledyard（1977）表明，簡單的、全球性的公共產品，可以被添加到這個設定中，並使用像 QV 這樣的二次方機制來保持最適性。
 
-   更為普遍的是，必須透過個人參與，來資助那些無法被邊際成本定價和自願捐款所覆蓋的基礎設施和公共產品的費用裡。由於對這些共享物品的支持，將使所有分享其價值的人受益，而且許多人都爲支持這些物品做出了貢獻，即使是自私的個人，通常也關心在共享物品的共同消費網路中，與他們關係密切相聯者的物質地位。
+   更普遍來說，基礎設施和公共產品必須透過個人參與，來資助那些無法被邊際成本定價和自願捐款所覆蓋的費用。由於對這些共享物品的支持，將使所有分享其價值的人受益，並且許多人都爲支持這些物品做出了貢獻，因此即使是自私的個人，通常也會關心在共享物品的共同消費網路中，與他們關係密切相聯者的外在地位。
 
    這產生了有效的利他主義關注，作爲「開明的自利」的一部分。這反過來又應該像上面的（3）那樣，需要有實現效率所必需的二次和線性（或在某些旋轉空間中的二次，quadratic in some rotated space）的混合機制，如 [Immorlica 等人（2019）](https://papers.ssrn.com/sol3/papers.cfm?abstract_id\=3420450)所探討的效果。出於類似的原因，這些機制應該有效地補貼跨越「社會」（共有物品中的共同參與）距離的合作。
 
@@ -220,11 +220,11 @@ cc: site.cc-by-nc-sa
 
    如果我們考慮到跨越兩個以上個體的合作所能帶來的價值，那麼最大流量的需要必須同時滿足。如果聯盟成員間對合作者的信任路徑是獨立的，那麼聯盟所能實現的總信任將最接近於各成員之間的信任相加。
 
-   然而，如果這些路徑相交，那麼總的信任度將是次總和（sub-additive），因為對某個成員的信任，會使得對另一個成員的信任路徑擁擠。
+   然而，如果這些路徑相交，那麼總信任度將是劣加的（sub-additive），因為對某個成員的信任，會使得對另一個成員的信任路徑擁擠。
 
-   比如說，如果所有的聯盟成員最終只通過單一的鏈結連接，那麼導向任何聯盟的信任都不會多於這個鏈結所能導入的信任。因此，補貼合作者路徑的社會多樣化程度，決定了一個聯盟所能擁有的信任程度。
+   比如說，如果所有的聯盟成員最終只通過單一的鏈結連接，那麼導向任何聯盟的信任，都不會多於這個鏈結所能導入的信任。因此，補貼合作者路徑的社會多樣化程度，決定了一個聯盟所能擁有的信任程度。
 
-6. **抵禦攻擊的安全性**：另一個安全模型，與用於研究 / 證明區塊鏈的模型密切相關，考慮了驗證節點可能被破壞 / 攻擊的情況，並根據攻擊成功所需的節點比例對系統進行分類。
+6. **抵禦攻擊的安全性**：另一個安全模型，與用於研究／證明區塊鏈的模型密切相關，考慮了驗證節點可能被破壞／攻擊的情況，並根據攻擊成功所需的節點比例對系統進行分類。
 
    這些統計數據，其隱含地假設驗證節點被破壞的概率，是獨立於驗證節點的；考慮到病毒和其他攻擊載體的工作模式，這種假設似乎是非常罕見的。
 
@@ -234,7 +234,7 @@ cc: site.cc-by-nc-sa
 
    這也說明了，如果某個系統的網路結構是可見的，但不能看到哪些節點被攻擊，那麼在阻止攻擊方面，要求多樣性的共識將比計算資源或節點的閾值更有效。相似的分析，也適用於某些在社會網絡中蔓延的供應鏈規劃，以及對戰爭或疾病的預測。
 
-7. **分權、制衡與癌症**：複雜系統的設計 / 分析中最常見的問題之一，是穩定性 / 穩健性。
+7. **分權、制衡與癌症**：複雜系統的設計／分析中最常見的問題之一，是穩定性／穩健性。
 
    不能成功清除癌症的生物系統會死亡，正如麥迪遜在《聯邦黨人文集》第 10 篇所寫，類似的論點也適用於避免政治派別的專政。
 
@@ -246,7 +246,7 @@ cc: site.cc-by-nc-sa
 
 1. 科學和技術研究的大部分工作，包括 James Evans 和他許多合作者的定量分析，表明科學創新通常來自於以前不交流的科學領域的溝通。最近在[《Science》](https://www.science.org/doi/10.1126/science.aao0185)雜誌上發表了一篇關於這項工作的出色評論。
 
-2. 近年來，組織和商業研究方面的文獻大量湧現，顯示了團隊 / 組織從文化到認知等各種維度多樣發展的好處。最近一些優秀的評論是由 [Scott Page](https://www.amazon.com/Diversity-Bonus-Knowledge-Compelling-Interests/dp/0691176884) 和 [McKinsey](https://www.mckinsey.com/featured-insights/diversity-and-inclusion/diversity-wins-how-inclusion-matters) 撰寫的。
+2. 近年來，組織和商業研究方面的文獻大量湧現，顯示了團隊／組織從文化到認知等各種維度多樣發展的好處。最近一些優秀的評論是由 [Scott Page](https://www.amazon.com/Diversity-Bonus-Knowledge-Compelling-Interests/dp/0691176884) 和 [McKinsey](https://www.mckinsey.com/featured-insights/diversity-and-inclusion/diversity-wins-how-inclusion-matters) 撰寫的。
 
 3. David Graeber 和 David Wengrow 的[《萬物黎明》（The Dawn of Everything）](https://en.wikipedia.org/wiki/The_Dawn_of_Everything) 強調在人類歷史長河中，人類文化、組織和政治的多樣性在現代性和進步產生方面的極端重要，揭示這些多樣性自身即存在意義的觀念。
 
@@ -260,7 +260,7 @@ cc: site.cc-by-nc-sa
 
    首先，多元論者真正支持的是什麼？他們是否有足夠共同捍衛的共識和希望？
 
-   其次，這種靈活性是否給了擁有技術知識的精英們很大的空間，來設計表面上中立的多元主義協定，而實際上是給他們狹隘的觀點和 / 或利益提供了特權？（這個問題在[我過去的作品中](https://www.radicalxchange.org/media/blog/2018-11-26-4m9b8b/)特別突出。）
+   其次，這種靈活性是否給了擁有技術知識的精英們很大的空間，來設計表面上中立的多元主義協定，而實際上是給他們狹隘的觀點和／或利益提供了特權？（這個問題在[我過去的作品中](https://www.radicalxchange.org/media/blog/2018-11-26-4m9b8b/)特別突出。）
 
    我謹慎樂觀地認為，許多解決上述某一特定模型的（可證明的）最佳或近似最佳協定，在其餘幾個模型中也是穩健的、近似最佳的，或者至少遠遠優於一元論的替代方案。
 
@@ -296,7 +296,7 @@ cc: site.cc-by-nc-sa
 
    一個典型的例子是[哈伯格稅（Harberger Tax）](http://assets.press.princeton.edu/chapters/s11222.pdf)，在這個案例中，房產的所有者通常有誇大所出售房產價格的動機，此一動機可以通過對他們承諾的售價徵稅來抵消。雖然細節可能因具體的算法而有不同，但關注它作為一個原則來約束制度設計的價值是合理的。恰好的是，運行自然且良好的多元宇宙，亦會傾向於精確的涉及這些抵消性激勵。
 
-   在富有野心的多元宇宙應用中，我們期望個人擁有的「金錢」（一個單一變量，代表普遍的社會價值 / 尊重）被更高維度的社會貨幣所取代，這些貨幣可作為反映個人在特定社會群體或關係中所擁有的尊重。
+   在富有野心的多元宇宙應用中，我們期望個人擁有的「金錢」（一個單一變量，代表普遍的社會價值／尊重）被更高維度的社會貨幣所取代，這些貨幣可作為反映個人在特定社會群體或關係中所擁有的尊重。
 
    行動者將有動機誇大在所屬群體中的關係、受到的尊重，就像他們希望在標準的資本主義經濟中可擁有更多財富一樣。但這種動機會抵消「多元宇宙」中低報社會關係以獲得塑造社會關係的「補貼」激勵。
 
@@ -310,7 +310,7 @@ cc: site.cc-by-nc-sa
 
 [^5]: 這個顧慮與系統的中心化程度緊密相關。資訊的中心化及受到隱匿的趨勢，正是經濟學家們經常擔心的激勵不匹配（incentive misalignments）問題的寫照。
 
-5. **多元宇宙是否正當（legitimate）**？也許對多元宇宙最直接的挑戰是：它的設計可能過於豐富 / 複雜，無法被社會充分理解和正當化。對我而言，這似乎是一個真正的挑戰，而且不可避免地涉及到最佳化和正當性之間，某種程度的權衡。
+5. **多元宇宙是否正當（legitimate）**？也許對多元宇宙最直接的挑戰是：它的設計可能過於豐富／複雜，無法被社會充分理解和正當化。對我而言，這似乎是一個真正的挑戰，而且不可避免地涉及到最佳化和正當性之間，某種程度的權衡。
 
    毫無疑問，要接納如此豐富的多元宇宙設計，不得不需要通過一系列的實驗、藝術探索、展示、教育，甚至可能通過新的理解技術，如虛擬實境模擬來進行。
 
@@ -358,9 +358,9 @@ cc: site.cc-by-nc-sa
 
 我認為這一點非常關鍵，因為今天其他主要的技術方向都藏有潛在的、隱晦的政治價值觀，這些價值觀往往會破壞多元主義。
 
-正如[我在其他地方所論證的](https://ethics.harvard.edu/how-ai-fails-us)，AI 領域最突出的論述是對「通用」智慧的奇點的渴望，其目的是超越人類智慧的多樣性，用與人類欲望「一致」的目標優化取代多元合作的混亂，這有時被稱爲「一致的推斷意志」（coherent extrapolated volition）。
+正如[我在其他地方所論證的](https://ethics.harvard.edu/how-ai-fails-us)，AI 領域最突出的論述是對「通用」智慧的奇點的渴望，其目的是超越人類智慧的多樣性，用與人類欲望「一致」的目標進行最佳化，來取代多元合作的混亂，這有時被稱爲「一致的推斷意志」（coherent extrapolated volition）。
 
-即使在這些最富野心的願景之外，AI 的重點仍是最大限度地提高系統的自主性、盡可能的複製人類能力，而不是促進人與人之間的交流和合作，這與多元制度形成了對比。將通用 AI 的發展作爲技術發展的主要 / 特殊方向，也與多元思維形成差異對比。
+即使在這些最富野心的願景之外，AI 的重點仍是最大限度地提高系統的自主性、盡可能的複製人類能力，而不是促進人與人之間的交流和合作，這與多元制度形成了對比。將通用 AI 的發展作爲技術發展的主要／特殊方向，也與多元思維形成差異對比。
 
 在這層意義上，AI 是深刻的中心化、一元化的未來技術願景。
 
