--- a/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -16,7 +16,7 @@ cc: site.cc-by-nc-sa
 [^1]: 其他能準確描述我的觀念，但更難理解的概念包括：多中心主義（polycentrism）和多中心集體主義（polycentric collectivism）。
 [^2]: 參見 [“Why I am not a Market Radical”](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)、[“Why I am not a Statist”](https://www.radicalxchange.org/media/blog/2019-01-28-5ixa34/)、[“Why I am not a Capitalist”](https://www.radicalxchange.org/media/blog/2019-01-14-j73qnz/)、[“Why I am not a Nationalist”](https://www.radicalxchange.org/media/blog/2019-02-18-9qwoyc/)、[“Why I am not a Technocrat”](https://www.radicalxchange.org/media/blog/2019-08-19-bv61r6/)。
 
-這篇文章，部份是通過了我的學術 - 技術主義透鏡，過濾了自 Eric Posner 和我出版《激進市場》以來，我學到的許多東西，但更多的是我從我的 RadicalxChange 董事會成員 Danielle Allen、Audrey Tang（唐鳳）和 Christopher Kulendran Thomas 三位身上學到的東西 [^3]。雖然這篇文章提出了許多問題，我希望這些問題將足夠精確、以一種前所未有的方式提出，助於激起和技術相關的、具有凝聚性的多元議程。
+這篇文章，部份是通過我的學術—技術主義透鏡，過濾了從 Eric Posner 和我出版《激進市場》以來，我學到的許多東西，但更多的是我從我的 RadicalxChange 董事會成員 Danielle Allen、Audrey Tang（唐鳳）和 Christopher Kulendran Thomas 三位身上學到的東西 [^3]。雖然這篇文章提出了許多問題，我希望這些問題將足夠精確、以一種前所未有的方式提出，助於激起和技術相關的、具有凝聚性的多元議程。
 
 [^3]: 我受到的其他影響包括：Hannah Arendt、W. E. B. du Bois、Liam Kofi Bright、Edmund Burke、John Dewey、James Allen Evans、Henry Farrell、Marion Fourcade、Pope Francis、Corrado Gini、Jaron Lanier、Pope Leo XIII、J. C. R. Licklider、Georg Simmel、Anne-Marie Slaughter、Alexis De Toqueville、Annibal Quijano、Deva Woodly.
 
@@ -104,7 +104,7 @@ cc: site.cc-by-nc-sa
 
    雖然在宗教的發展史上，曾有數不盡的「混合」（syncretic）信仰試圖統一並且消除這種多樣性發生（例如，印度教、基督教、伊斯蘭教、普救一位神教（UU）、巴哈伊教），但其中最成功的是在於增加了信仰的多樣性；似乎並沒有任何穩定的和平流動，使現有的信仰進入一個普世的吸引子（attractor）。另一方面，政治意識型態和倫理觀設法以各種信仰的原生術語替自己辯護，對當代國家和國際法的發展至關重要。
 
-2. **語言**：被分爲十幾個語系的 91 種語言，有 1000 多萬人使用，還有更大量的語言由更少的人使用。不論人們是否贊同薩皮爾 - 沃爾夫假說（Sapir-Whorf Hypothesis）的各種版本，根據該假說，某些思想在某些語言中是不可想像的，或者更委婉的說，顯然某些語言比其他語言更適合於表達某些思想。因此，這些語言差異在某些方向上很重要，反映了承載它們的社會條件。
+2. **語言**：被分爲十幾個語系的 91 種語言，有 1000 多萬人使用，還有更大量的語言由更少的人使用。不論人們是否贊同薩皮爾—沃爾夫假說（Sapir-Whorf Hypothesis）的各種版本，根據該假說，某些思想在某些語言中是不可想像的，或者更委婉的說，顯然某些語言比其他語言更適合於表達某些思想。因此，這些語言差異在某些方向上很重要，反映了承載它們的社會條件。
 
    統一語言的嘗試，在很大程度上可以說是在殖民或其他形式的脅迫下進行的，而不是通過對理性超越的追求；對於目前最主要的語言（如漢語和英語）體現怎樣的「理性」，幾乎沒有任何說法支撐。同時，翻譯（通常在自動化的幫助下）每天都在變得更加方便，文本得以在不同語言之間的透過良好翻譯產生共鳴，這既是重要的里程碑，也成為使其成功的顯著關鍵。
 
@@ -320,7 +320,7 @@ cc: site.cc-by-nc-sa
 
    這樣的「人的因素」或許應該得到最高的關注，因為它們在個人電腦和網際網路發展的黃金時期，已經有許多研究，而不是像在 AI 社群那樣被認爲是事後之明。但與此同時，它們並沒有給我設下不可逾越的入門障礙。
 
-   此外，還有許多看起來同樣繁瑣和、難以正當化的協定（例如權益證明（Proof of Stake）與許多黑箱統計方法）並不怎麼多元化，但近期卻取得了巨大的成功和正當性。
+   此外，還有許多看起來同樣繁瑣、難以正當化的協定（例如權益證明（Proof of Stake）與許多黑箱統計方法）並不怎麼多元化，但近期卻取得了巨大的成功和正當性。
 
    在此，我希望關於正當性的關鍵問題，將不斷地被提出，作為塑造多元主義的一把手術刀，而不是作為阻礙它們發展的一根攔路棍。
 
