--- a/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -172,21 +172,21 @@ cc: site.cc-by-nc-sa
 
 1. **統計學認識論**：「群眾智慧」（wisdom of crowds）這一論點，通常被作為證明市場制度（如預測市場）和民主制度的合理性。
 
-   這至少可以追溯到孔多塞侯爵（Marquis de Condorcet）著名的「陪審團定理」（1785 年）：該觀點認爲，如果許多人都具有獨立且對等分佈的關於真理的信號（independent and identical distribution, iid），那麼所有人的等權投票比一個子集的投票更可能獲得真理。
+   這至少可以追溯到孔多塞侯爵（Marquis de Condorcet）著名的「陪審團定理」（1785 年）：該觀點認爲，如果許多人都具有獨立且對等分佈的、關於真相的訊號（independent and identical distribution, iid），那麼所有人的等權投票比一個子集的投票更可能獲得真理。
 
-   這一結果作為支持民主的理由的力量一直被誇大了，同樣的邏輯意味着那些擁有更精確信號的人應該被賦予更大的權重，這與標準的一人一票規則不同。
+   這一結果作為支持民主理由的力量一直被誇大了，同樣的邏輯意味着那些擁有更精確訊號的人應該被賦予更大的權重，這與標準的一人一票規則不同。
 
-   然而，有個更豐富、更普遍的變種，一個不需要任何不平等主義的假設，即信號一般不會獨立分佈。在當代政治中，幾乎每個人都會接受的一件事是，存在着不同的「部落」（Tribes），這些部落的偏見與他們的觀點（與可能的錯誤）相關。
+   然而，有個更豐富、更普遍的變種，一個不需要任何不平等主義的假設，即訊號一般來說不會獨立分佈。在當代政治中，幾乎每個人都會接受的一件事是，存在着不同的「部落」（Tribes），這些部落的偏見與他們的觀點（與可能的錯誤）相關。
 
-   雖然精確的最佳估計量取決於統計依賴性的精確結構，但存在一個強大而直接的統計直覺，比起那些具有相關錯誤的信號，應該給予相對獨立的信號的積累更大的權重。
+   雖然精確的最佳估計量取決於統計依賴性的精確結構，但存在一個強大而直接的統計直覺，比起那些具有相關錯誤的訊號，應該給予相對獨立的訊號的積累更大的權重。
 
-   此一原則在科學哲學中常被稱爲「跨界一致性」（consilience）。它表明，比起個人可信度的任何對稱／交換函數，由社會上不同的群體支持故而不太可能互相串謀的行動方案，應該得到更大的相對可信度。這傾向於支持跨越差異的合作原則。
+   此一原則在科學哲學中常被稱爲「跨界一致性」（consilience）。它表明，比起個人可信度的任何對稱／交換函數，由社會上不同的群體支持、故而不太可能互相串謀的行動方案，應該得到更大的相對可信度。這傾向於支持跨越差異的合作原則。
 
-   它也與中立性大體一致，因為即使對精確性沒有特別看法，似乎也能對關聯結構有合理的、廣泛的社會共識。最後，它似乎相當具備可適應性，正因為它是基於一般常態的統計性質，而不是基於被視為不可改變的特定歷史環境。
+   它也與中立原則大體一致，因為即使對精確性沒有特別看法，似乎也能對關聯結構有合理的、廣泛的社會共識。最後，它似乎相當具備可適應性，正因為它是基於一般常態的統計性質，而不是基於被視為不可改變的特定歷史環境。
 
-2. **統計檢定力**：Penrose（1946）分析了一個擁有許多票的實體相對於一個擁有單一票的實體的投票權。
+2. **統計檢定力**：Penrose（1946）分析了一個擁有許多票的實體，相對於擁有單一票的實體的投票權。
 
-   在個人的偏好獨立且相同分佈（iid）的情況下，一個擁有 M 票的人與 M²個各擁有一票的人改變結果的機會相同，因爲平均而言，iid 的選民傾向於互相抵消彼此的偏好。
+   在個人的偏好獨立且相同分佈（iid）的情況下，一個擁有 M 票的人與 M²個各擁有一票的人改變結果的機會相同，因爲平均來說，iid 的選民傾向於互相抵消彼此的偏好。
 
    因此，Penrose 認爲，代表團的投票權應該等於他們所代表的人口的平方根，這一規則在構成歐盟投票基礎的《尼斯條約》中得到了大致的實施。
 
