--- a/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -76,7 +76,7 @@ cc: site.cc-by-nc-sa
 
 1. 美國憲法是著名的聯邦主義（Federalist），於各州和國家政府之間的權力劃分以及全國範圍內的代表制度上，參議院和選舉人團分別根據各州的數量與人口來給予權重。
 
-2. 「聯合」（Consociational）政權，明確代表著其沿著歷史上形成的分歧（無論是政治、種族還是語言）平衡權力，舉例如：比利時和瑞士（語言分歧），阿比（Abiy）上臺前的埃塞俄比亞（種族分歧），南非（種族分歧）以及哥倫比亞和荷蘭（政治分歧）。或許最廣為人知的是：「教派」（confessional）聯合政權，所有的權利職位都依據憲法規定, 基於教派團體分配，制衡機制亦鼓勵跨教派合作以實現政治目的。黎巴嫩、伊拉克和北愛爾蘭是主要例子。
+2. 「聯合」（Consociational）政權，明確代表著其沿著歷史上形成的分歧（無論是政治、種族還是語言）平衡權力，舉例如：比利時和瑞士（語言分歧），阿比（Abiy）上臺前的埃塞俄比亞（種族分歧），南非（種族分歧）以及哥倫比亞和荷蘭（政治分歧）。或許最廣為人知的是：「教派」（confessional）聯合政權，所有的權利職位都依據憲法規定，基於教派團體分配，制衡機制亦鼓勵跨教派合作以實現政治目的。黎巴嫩、伊拉克和北愛爾蘭是主要例子。
 
 3. 社團主義政治理論（corporatist political theory）也強調「多元」，意指伴隨著物質／產業範疇／職業經驗／專業知識／興趣等不同而生出的多元制度。此一思想深深紮根於古典（如柏拉圖）和宗教（如天主教社會思想）的政治理論中，影響了各種政治制度，例如從德國企業共同決策方案到愛爾蘭參議院。然而，在二十世紀上半葉，它們可能是最野心勃勃的嘗試，也與法西斯主義和受法西斯主義激勵的政府密切相關。社會科學家吉尼（Corrado Gini）因其提出的吉尼係數研究聞名於世，他領導設計了一種功能代表制，主要按行業和生產要素劃分權力，在墨索里尼的統治下取代了國家議會。
 
@@ -154,11 +154,11 @@ cc: site.cc-by-nc-sa
 
 5. **適應原則（Adaptation）**：哪些群體和領域獲得認可，應該適應群體的自然變化。作為對社會、知識交流的重要因子，鼓勵社會親和力（social affinity）與智識開啟的新模式，新群體、新領域的動態形成，應作為社會系統的目標。
 
-大多數的原則是不言自明的，已出現在許多多元主義論述中。暫且不論它們有何不同，較有爭議的可能是 3、5 兩點。在某些的多元主義思想／應用中，中立性並非一個標準，其對一些社會群體採取容忍的態度、而非平等。
+大多數的原則是不言自明的，已出現在許多多元主義論述中。暫且不論它們有何不同，較有爭議的可能是 3、5 兩點。
 
-我並不特別注重這樣的想法，因爲一旦有了中立的正式規則，要將哪些部分排除在多元主義的概念之外是可預見的。因此，站在我的角度，核心任務將是：確立中立的多元主義正式規則，由那些應用它的人，來決定哪些形式的差異是合適的。
+在某些多元主義思想／應用裡，中立性並非一個標準，它們對一些社會群體採取容忍的態度、而非平等。我不會特別關注在這類成見上，因爲一旦確定了正式的中立規則，之後若要將某些群體排除在多元概念之外，不費什麼工夫。因此，站在我的角度，核心任務將是：確立中立的多元主義正式規則，由那些應用它的人，來決定哪些形式的差異是合適的。
 
-也許大多數的多元主義哲學／制度（尤其是那些具有保守傾向的制度）會傾向於拒絕適應，只持續關注某些固定的社會群體。雖然這似乎讓我和大多數的多元論者看來不太一致，但在我看來，若多元主義要能回應上面討論的批評者，並在面對其他更有活力的社會哲學時生存下去，這與其說是一種設計考量，不如說是必要條件。
+此外，或許大多數的多元主義哲學／制度（尤其是那些具有保守傾向的制度）會傾向於拒絕適應，只持續關注某些固定的社會群體。雖然這似乎讓我和大多數的多元論者看來不太一致，但在我看來，若多元主義要能回應上面討論的批評者，並在面對其他更有活力的社會哲學時生存下去，這與其說是一種設計考量，不如說是必要條件。
 
 因此，這些標準，儘管與其他多元主義哲學不同，但對於回答上述對多元主義提出的存在問題是必要的。
 
@@ -186,7 +186,7 @@ cc: site.cc-by-nc-sa
 
 2. **統計檢定力**：Penrose（1946）分析了一個擁有許多票的實體，相對於擁有單一票的實體的投票權。
 
-   在個人的偏好獨立且相同分佈（iid）的情況下，一個擁有 M 票的人與 M²個各擁有一票的人改變結果的機會相同，因爲平均來說，iid 的選民傾向於互相抵消彼此的偏好。
+   在個人的偏好獨立且相同分佈（iid）的情況下，一個擁有 M 票的人與 M² 個各擁有一票的人改變結果的機會相同，因爲平均來說，iid 的選民傾向於互相抵消彼此的偏好。
 
    因此，Penrose 認爲，代表團的投票權應該等於他們所代表的人口的平方根，這一規則在構成歐盟投票基礎的《尼斯條約》中得到了大致的實施。
 
@@ -260,11 +260,11 @@ cc: site.cc-by-nc-sa
 
    首先，多元論者真正支持的是什麼？他們是否有足夠共同捍衛的共識和希望？
 
-   其次，這種靈活性是否給了擁有技術知識的精英們很大的空間，來設計表面上中立的多元主義協定，而實際上是給他們狹隘的觀點和／或利益提供了特權？（這個問題在[我過去的作品中](https://www.radicalxchange.org/media/blog/2018-11-26-4m9b8b/)特別突出。）
+   其次，這種靈活性，是否給了擁有技術知識的精英們很大的空間，來設計表面上中立的多元主義協定，而實際上是給他們狹隘的觀點和／或利益提供了特權？（這個問題在[我過去的作品中](https://www.radicalxchange.org/media/blog/2018-11-26-4m9b8b/)特別突出。）
 
    我謹慎樂觀地認為，許多解決上述某一特定模型的（可證明的）最佳或近似最佳協定，在其餘幾個模型中也是穩健的、近似最佳的，或者至少遠遠優於一元論的替代方案。
 
-   如果這個信念得到了驗證，就應該可以維持認識論上的多元主義而且不損害多元主義的成功。如果多元論者能夠同意，至少有某類多元制度是他們都喜歡的、可接受的，而且不是一元論的替代方案，那麼，現行合理的多樣性，就可以與支持（和認識論上的多元）多元制度的廣泛發展的運動並存。
+   如果這個信念得到了驗證，就應該可以維持認識論上的多元主義，而且不損害多元宇宙的成功。如果多元論者能夠同意，至少有某類多元制度是他們都喜歡的、可接受的，而且不是一元論的替代方案，那麼，現行合理的多樣性，就可以與支持（和認識論上的多元）多元制度的廣泛發展的運動並存。
 
    而如果這類協議由相對少數、合理又穩健的協定組成，則可以遏制狹隘利益進行參數操縱的空間。
 
