--- a/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -28,15 +28,15 @@ cc: site.cc-by-nc-sa
 
 我將從闡明定義和邏輯對比開始，強調多元主義的制度設計和思想模式，再用各種具體的例子，來說明這兩個面向的輪廓，從中總結出一系列關於多元宇宙的準正式原則（quasi-formal principles）。
 
-接下來，儘管可能有人會擔心多元思維是否會過於模糊，以至於無法產生出有關於制度設計具體的見解，但我將論證，它事實上至少為證明多元宇宙的一個核心要素提供了理想的基礎：「跨越多樣性的合作」原則（the principle of cooperation across diversity）。
+接下來，儘管可能有人會擔心多元思維是否會過於模糊，以致無法產生出具體的制度設計見解，但我將論證，它事實上至少為證明「多元宇宙」的一個核心要素，提供了理想的基礎：「跨越多樣性的合作」原則（the principle of cooperation across diversity）。
 
-我將提出使多元制度發揮作用的實際挑戰有哪些，以及為什麼我覺得這些挑戰是可以被克服的。最後，我將分享我所理解的一些重要研究領域，這些領域可塑造成為比 AI 或 Web3 更富野心、更具變革性的多元技術議程——而且更加迷人。最後，我為此獻上祝福。
+我將提出使多元制度發揮作用的實際挑戰有哪些，以及為什麼我覺得可以克服這些挑戰。最後，我將分享我所理解的一些重要研究領域，這些領域可塑造成為比 AI 或 Web3 更富野心、更具變革性的多元技術議程——而且更加迷人。最後，我為此獻上祝福。
 
 #### 闡明定義
 
 我理解的多元主義，是一種社會哲學，它承認並促進多樣社會文化群體和系統間的繁榮與合作。
 
-以下，我將從兩個面向，來說明我所認識的多元主義，即：制度論和認識論。
+以下，我將從兩個面向，來說明我所認識的多元主義：制度論和認識論。
 
 制度上的多元主義與一系列社會哲學形成對比，那些哲學可能被描述爲「一元論」（monist，我在一篇相關文章中調侃地稱這些爲 [ALONE：原子化自由主義與客觀主義的天真認識論](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)）。一元論哲學傾向於關注孤立的個體和／或這些個體所處的統一／普遍結構。
 
@@ -90,15 +90,15 @@ cc: site.cc-by-nc-sa
 
 然而，如果你再深入探討，很快會發現，這些一元論的提倡者幾乎都對自己支持的觀念缺乏深刻信念：大多數人都會承認，如果沒有一系列的措施來保護少數人，一人一票往往會導致災難性的結果。
 
-即使是此類倡議者最推崇的歐洲議會民主制，也包含了大量的多元主義元素，如：各成員國內部的聯邦制（如英國、德國、義大利、西班牙）、各政黨之間權力分享、形成共識的隱性和顯性規則等，從比例代表和組建聯盟到荷蘭的非正式波德（Polder）制度。大多數人也至少對某種形式的輔助性原則（principles of subsidiarity）、某些群體的的權利進行明確的非個人主義保護等，產生共情。
+即使是此類倡議者最推崇的歐洲議會民主制，也包含了大量的多元主義元素，如：各成員國內部的聯邦制（如英國、德國、義大利、西班牙）、各政黨之間權力分享、形成共識的隱性和顯性規則等，從比例代表和組建聯盟，到荷蘭的非正式波德（Polder）制度。大多數人也至少對某種形式的輔助性原則（principles of subsidiarity）、以明確非個人主義的方式保護某些群體的權利等，感到同情。
 
-順著這個思路，接著要問的就是：為什麼要通過消除多元制度和恢復一元論，來解決這些問題？**為什麼不通過更傾向多元主義、形成更多認知，來解決這個問題？**雖然這讓問題看起來更加複雜，但現代社會網絡理論和由此產生的演算法，正是為了應對這種複雜性。
+順著這個思路，接著要問的就是：為什麼要通過消除多元制度和恢復一元論，來解決這些問題？**為什麼不通過更傾向多元主義、承認更多樣的分眾，來解決這個問題？**雖然乍看之下更加複雜，但現代社會網絡理論和由此產生的演算法，正是為了應對這種複雜性。
 
 #### 多元思維
 
-然而，在說明這一點何以發揮作用之前，有必要轉向多元主義的另一面，即認識論。如上所述，我在強調多元主義在實踐中的普遍應用性時、也同時提及了對它的「抵制」。我認為這些抵制是可以、也應該是透過多元主義的發展下所帶動的思維認知，而自然化解的。
+然而，在說明這一點何以發揮作用之前，有必要轉向多元主義的另一面，即認識論。如上所述，我在強調多元主義在實踐中的普遍應用性時、也同時提及了對它的「抵制」。我認為這些抵制可以、也應該透過多元主義的發展帶動的思維認知，而自然化解。
 
-多元思維的現實，也許比多元制度的現實更為顯見，來思考一些下面的舉例：
+多元思維的現實，也許比多元制度的現實更為顯而易見。舉例如下：
 
 1. **宗教**：大多數宗教，至少在其純粹的形式上，都聲稱是對基本形而上學的獨家闡述。然而，鑑於理性文明中虔誠的宗教信念的多樣性，大多數成功的宗教都與其他信仰團體達成了多元的理解，尊重彼此的信念、尋求合作和學習——特別是在倫理和政治領域——同時各自保持對其教團社群的承諾。
 
@@ -106,7 +106,7 @@ cc: site.cc-by-nc-sa
 
 2. **語言**：被分爲十幾個語系的 91 種語言，有 1000 多萬人使用，還有更大量的語言由更少的人使用。不論人們是否贊同薩皮爾—沃爾夫假說（Sapir-Whorf Hypothesis）的各種版本，根據該假說，某些思想在某些語言中是不可想像的，或者更委婉的說，顯然某些語言比其他語言更適合於表達某些思想。因此，這些語言差異在某些方向上很重要，反映了承載它們的社會條件。
 
-   統一語言的嘗試，在很大程度上可以說是在殖民或其他形式的脅迫下進行的，而不是通過對理性超越的追求；對於目前最主要的語言（如漢語和英語）體現怎樣的「理性」，幾乎沒有任何說法支撐。同時，翻譯（通常在自動化的幫助下）每天都在變得更加方便，文本得以在不同語言之間的透過良好翻譯產生共鳴，這既是重要的里程碑，也成為使其成功的顯著關鍵。
+   統一語言的嘗試，在很大程度上可以說是在殖民等形式的脅迫下進行的，而不是通過對理性超越的追求；對於目前最主要的語言（如漢語和英語）體現怎樣的「理性」，幾乎沒有任何論據支撐。同時，翻譯（通常在自動化的幫助下）每天都在變得更加方便，文本得以在不同語言之間，透過良好翻譯產生共鳴。這既是重要的里程碑，也成為使其成功的顯著關鍵。
 
    此外，即使在某些語言的統一進程中，它們的主導語言也在繼續演變，並在次文化（sub-culturally）上分裂（例如，標準白人英語對標準黑人英語）。即使在某些新興的、書呆子氣（nerdy）的領域，例如程式語言，競爭性的架構在不斷激增，並具有互相權衡（trade-offs）的特點。
 
@@ -114,7 +114,7 @@ cc: site.cc-by-nc-sa
 
    讓我特別說明一些我在學術領域工作上，與這些密切相關的案例。經濟學建立在私人物品的稀缺性、理性和方法論／制度個人主義之上；社會學則建立在集體物品、符號學和方法論／制度集體主義之上。在經濟學中，公共財政領域基本上排除了市場力量存在的可能，而產業組織領域則排除了不平等和一般均衡。
 
-   雖然這確實可做為打通領域和次領域的嘗試，但它們在任何時候都只佔總體活動的一小部分，而且資金不足；最重要的是，其結果通常不是取代相關領域，而是再誕生一個新的領域或子領域（例如，資料科學來自統計學和計算機科學，行為經濟學來自經濟學和心理學）。同時，學術界對實務界的大多數重大影響（或者至少是那些得到了歷史的大方接受的）都需要跨領域的合作和同意（例如，網際網路和個人電腦的誕生、應對流行病的最有效對應等）。
+   雖然這確實可做為打通領域和次領域的嘗試，但它們在任何時候都只佔總體活動的一小部分，而且資金不足；最重要的是，其結果通常不是取代相關領域，而是再誕生一個新的領域或次領域（例如，資料科學來自統計學和資訊科學，行為經濟學來自經濟學和心理學）。同時，學術界對實務界的大多數重大影響（或者至少是那些得到了歷史的大方接受的）都需要跨領域的合作和同意（例如，網際網路和個人電腦的誕生、應對流行病的最有效對應等）。
 
 雖然這樣的多元化，正是這些領域和其他許多領域（如體育、技術、工業）的核心和持久特徵，但對這種異質性的不滿是持續的，試圖克服它更是常見的。關於宗教，任何無神論者都將（表面上「不一致」的）宗教多樣性，視爲他們對單一「理性」（如上所述，其本身非常難以捉摸）解釋一切的能力的信仰的證明。
 
@@ -132,9 +132,9 @@ cc: site.cc-by-nc-sa
 
 透過以上來看，「理性的」或近似最佳的語言，幾乎是不可想像的，為數不多的試圖實現這一個目標（例如世界語，Esperanto，我曾經講過這個語言，而且相當熱衷於此），而無論是在實際採用的程度，還是在實現任何類似於證明最佳，或僅僅比現行語言更好而被廣泛接受的程度，都僅取得了有限的成功。
 
-再來看理性主義的科學傳統，它使得科學知識的統一看來不像前兩個例子那麼顯而易見的不合調，但我相信很大程度上這只是一種幻覺，所有阻止語言或宗教統一的因素，在學術研究領域都更加強烈。
+再來看理性主義的科學傳統，它使得科學知識的統一，看來不像前兩個例子那麼顯而易見的不合調。但我相信，很大程度上這只是幻覺，所有阻止語言或宗教統一的因素，在學術研究領域都更加強烈。
 
-想像某個連貫性的分析領域，人們可以在其中接受有意義的訓練，將計算機科學、經濟學、社會學、人類學、分析哲學和歐陸哲學等都納入一套單一的標準和要點，至少從表面上來看這樣做有些荒謬，就像對語言如此一般。在不抹殺對其他領域承諾下認真看待這些領域所蘊含的價值，涉及到許多統一宗教時面臨的挑戰。
+想像某個具有連貫性的分析領域，人們可以在其中接受有意義的訓練，將計算機科學、經濟學、社會學、人類學、分析哲學和歐陸哲學等，都納入單一的標準和要點。至少從表面上來看這樣做有些荒謬，就像對語言如此一般。在不抹殺對其他領域承諾下，認真看待這些領域所蘊含的價值，涉及到許多統一宗教時面臨的挑戰。
 
 因此，一種認識論再次自然地浮現出來，與制度多元主義並行。與其渴望將所有領域合併成一個單一理論，或者朝着某種普遍真理進展，為何不追求知識日益增長的具體化和差異化，積極投資於溝通這些不同領域專業，以發展具體的應用和技術？
 
@@ -144,11 +144,11 @@ cc: site.cc-by-nc-sa
 
 行文至此，多元制度和多元認識論的相似之處，希望已經浮現各位眼前。爲了突出它們的相似性，我將提出一套適用於這兩者的原則。
 
-1. **承認原則（Recognition）**：認可（形式上或智識上）社會團體／思想流派，並給予它們超越成員／個人思想之和的認識論或機構制度的定位。
+1. **承認原則（Recognition）**：認可（形式上或智識上）社會團體／思想流派，並給予它們超越成員／個人思想之總和的認識論或機構制度的定位。
 
 2. **輔助原則（Subsidiarity）**：主要涉及某類社會群體、或其成員、或其關注的思想活動和議題，應當被委託給該群體的集體主導團或知識權威，而不是由更大型、或高層次的組織掌控或分析（analysis）來制定規則。同時，範圍更廣的組織／分析在很大程度上，關注狹義的組織／分析之間的互動，而不是直接關注其行為／具體分析。
 
-3. **中立原則（Neutrality)**：一套可被廣義族群接受的正式規則（Formalisms）和分析實踐，應該支配著社會群體／分析領域（包含個人）之間的互動，因為這樣，所以人會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏向某個群體／領域。
+3. **中立原則（Neutrality)**：一套可被廣義族群接受的正式規則（Formalisms）和分析實踐，應該支配著社會群體／分析領域（包含個人）之間的互動，因為這樣，所以人們會產生粗略的共識。也就是說，他們運作的遊戲規則，實際上並不會偏好某個群體／領域。
 
 4. **CAD 原則（Cooperation across diversity，跨越多樣性的合作）**：在一系列社會群體中（多層次）廣泛受到認可的行動和觀點，應該得到更多的信任，即使它的平均個人認可程度並沒有比較高。
 
@@ -192,23 +192,23 @@ cc: site.cc-by-nc-sa
 
    就像前面的例子一樣，要讓每張票都符合 iid，或者是無懈可擊聯盟的一部分，這種假設很少成立。相反，政治學告訴我們，各種社會成員關係往往與投票偏好相關，但很少完全相關。
 
-   在這種情況下，平衡各黨派和團體的有效投票權將比簡單的平方根規則所暗示的要複雜得多，但可能會遵循類似的性質模式。因此，與社會上非常不相關的群體的投票相比，緊密相關的群體的投票應該相對於人口規模被降低權重，這使得比起支持者的人口規模，具有社會廣泛支持的選擇的力量則會被相對放大。
+   在這種情況下，平衡各黨派和團體的有效投票權將比簡單的平方根規則所暗示的要複雜得多，但可能會遵循類似的性質模式。因此，與社會上非常不相關的群體的投票相比，緊密相關的群體的投票，應該相對於人口規模被降低權重。而比起支持者的人口規模來說，具有更社會廣泛支持的選項的力量，則會被相對放大。
 
-3. **博弈與激勵理論**：我的學術背景主要是建立在博弈論基礎上的機制設計。大多數機制設計是以個人的自利爲前提，以貨幣等價物爲單位。平方投票（Quadratic Voting，QV）是基於這種論述的大型群體之間，近似最適的集體決策程序。
+3. **博弈與激勵理論**：我的學術背景，主要是建立在博弈論基礎上的機制設計。大多數機制設計是以個人的自利爲前提，以貨幣等價物爲單位。平方投票（Quadratic Voting，QV）是基於這種論述的大型群體之間，近似最適的集體決策程序。
 
    在該程序中，個人使用某種貨幣（通常是平均分配的話語權，voice credits）來表達對各種提議或候選人的同意或反對。然而，收到的總支持並非個人貢獻的線性總和，還增加了「互動」成分，因此，眾人的有限貢獻，比單人的巨大貢獻更有力量。
 
    這種效應是相當顯著的：1000 個人的每人一枚代幣，等於一個人的一百萬枚代幣。這就解決了「搭便車」的問題，即個人在大型專案中的貢獻較少。
 
-   然而，原子化的個人自利假設通常被理解爲「狹隘」的。社會關係密切的個人往往對彼此的利益有著利他主義的關注，而這種關注可以直接解決搭便車的問題。若沒有考慮到這一點，會導致 QV「過度解決」（oversolve）的情況，使結果過於偏向關聯群體。
+   然而，原子化的個人自利假設通常被理解爲「狹隘」的。社會關係密切的個人往往對彼此的利益有著利他主義的關注，而這種關注可以直接解決搭便車問題。若沒有考慮到這一點，會導致 QV「過度解決」（oversolve）的情況，使結果過於偏向關聯群體。
 
    [Buterin (2019)](https://ethresear.ch/t/pairwise-coordination-subsidies-a-new-quadratic-funding-design/5553) 表明，如果縮減與具有利他主義的群體（可由他們在機制中的行動所揭示）之間的互動有關的平方項，就可以克服這個問題。這也說明了，在根據相關個體的社會親密度，通過結合線性和平方項的程序，近似最適的投票機制是可能的。
 
-   這傾向於支持多樣性，因為社會距離較遠的個人之間的互動項將被保留，而社會距離較近的個人之間的互動項則被抵消，從而允許具有社會多樣性支持的專案，戰勝具有更多同質化支持的專案。
+   這傾向於支持多樣性，因為社會距離較遠的個人之間的互動項將被保留，而社會距離較近的個人之間的互動項則被抵消，從而允許具有社會多樣性支持的專案，勝過具有更多同質化支持的專案。
 
 4. **一般均衡經濟學**：從整體上理解經濟的典型框架是「全面均衡」。一般均衡理論表明，在某些條件下，具有適當稟賦效應的資本主義經濟，會產生所有理想的結果。
 
-   然而，有兩個關鍵條件：所有商品都是私人的（僅由單人消費）、這些商品的生產表現出「報酬遞減」（由一組資源聯合生產的數量，不會超過由各個單獨生產者之和）。
+   然而，它有兩個關鍵條件：所有商品都是私人的（僅由單人消費）、這些商品的生產表現出「報酬遞減」（由一組資源聯合生產的數量，不會超過由各個單獨生產者之和）。
 
    這些條件排除了大多數與現代社會相關的現象，如技術創新、網路效應、基礎設施、城市等。Groves 和 Ledyard（1977）表明，簡單的、全球性的公共產品，可以被添加到這個設定中，並使用像 QV 這樣的二次方機制來保持最適性。
 
