--- a/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_i18n/zh-TW/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -24,7 +24,7 @@ cc: site.cc-by-nc-sa
 
 但我必須提醒，以目前資訊技術發展的主流方向（一方面是 AI，另一方面是圍繞 Web3 和 metaverse 的研究），通常被設想成代表總體主義（totalism）和原子主義（atomism），從而發展出與多元主義嚴重衝突的前景。
 
-儘管對於理解多元主義、在其思維模式中受過浸潤的人來說，許多論點都顯而易見。然後，如果多元主義想要在我們這個時代的技術變革中生存下來，那麼現在迫切需要有人為它制定一個可連貫的技術議程（我將稱之為多元宇宙「Plurality」），以制衡這些相反的趨勢。
+儘管對於理解多元主義、在其思維模式中受過浸潤的人來說，許多論點都顯而易見。然後，如果多元主義想要在我們這個時代的技術變革中生存下來，那麼現在迫切需要有人為它制定融貫的技術議程（我將稱之為多元宇宙「Plurality」），以制衡這些相反的趨勢。
 
 我將從闡明定義和邏輯對比開始，強調多元主義的制度設計和思想模式，再用各種具體的例子，來說明這兩個面向的輪廓，從中總結出一系列關於多元宇宙的準正式原則（quasi-formal principles）。
 
@@ -38,33 +38,33 @@ cc: site.cc-by-nc-sa
 
 以下，我將從兩個面向，來說明我所認識的多元主義：制度論和認識論。
 
-制度上的多元主義與一系列社會哲學形成對比，那些哲學可能被描述爲「一元論」（monist，我在一篇相關文章中調侃地稱這些爲 [ALONE：原子化自由主義與客觀主義的天真認識論](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)）。一元論哲學傾向於關注孤立的個體和／或這些個體所處的統一／普遍結構。
+制度上的多元主義，與一系列社會哲學形成對比，那些哲學可能被描述爲「一元論」（monist，我在一篇相關文章中調侃地稱之爲 [ALONE：原子化自由主義與客觀主義的天真認識論](https://www.radicalxchange.org/media/blog/why-i-am-not-a-market-radical/)）。一元論哲學傾向於關注孤立的個體和／或這些個體所處的統一／普遍結構。
 
-以孤立的個人為前提的原子主義意識形態，經常被用來為資本主義辯護，因爲它既強調群體又強調個人。然而，對於制度多元主義來說，群體並不僅僅是個人利益的載體，而是具有其存在基本意義的根本價值。
+以孤立的個人為前提的原子主義意識形態，經常被用來為資本主義辯護，因爲它既強調群體又強調個人。然而，對於多元制度來說，群體並不僅僅是個人利益的載體，而是具有其存在基本意義的根本價值。
 
-與此同時，以單一或普遍結構爲前提的集中主義（centralistic）意識形態，經常被用來替民粹主義的國家主義和民族主義辯護。相反，制度多元主義否認任何一個團體／集體（如民族國家、普世人權等）的中心地位。
+與此同時，以單一或普遍結構爲前提的集中主義（centralistic）意識形態，經常被用來替民粹主義的國家主義和民族主義辯護。與其相反，多元制度否認任何一個團體／集體（如民族國家、普世人權等）的中心地位。
 
-認識論多元主義與那些尋求一致、共通性的認知傳統（最顯著的是技術官僚主義、又稱專家主義 technocracy）形成了強烈對比。它通過否認任何單一的理性邏輯或功績主義（meritocratic）方案可作為社會秩序的最佳解，來做到這一點。
+多元主義認識論，與那些尋求一致、共通性的認知傳統（最顯著的是技術官僚主義、又稱專家主義 technocracy）形成了強烈對比。它通過否認任何單一的理性邏輯或功績主義（meritocratic）方案可作為社會秩序的最佳解，來做到這一點。
 
-認識論多元主義重視多樣性，強調這些互不通約的集體實體與知識文化共聯的重要——彼此相互交織且協作，有異而共存。
+多元思維重視多樣性，強調這些互不通約的集體實體與知識文化共聯的重要——彼此相互交織且協作，有異而共存。
 
-在此，我想有必要提出一些例子（見「多元制度」和「多元思維」），自然是來自於我早前的發表對比。但在提出之前，我在以下概述了一些額外的資格限定（qualifications）。
+在此，我想有必要提出一些例子（見「多元制度」和「多元思維」），自然是出自於我早前的對比文章。但在提出之前，以下先概述一些額外的限定條件（qualifications）。
 
 #### 限定條件
 
-多元主義是在多種哲學中出現的一個元素，起到某些重要的想法，我自己並不接受那些哲學，但從中學到了許多。它在一些保守的、宗教的和反動的思想中發生重要作用。它在後現代、文化相對主義和虛無主義思想中也相對重要。為了將我的思想和這些我大多拒絕的學派清楚地區隔開來，在此，必須強調我思想中的另外三個元素，為了簡潔起見，我沒有將它們附加在上述多元主義中。
+多元主義的成份，在許多種哲學裡都有出現。雖然我自己並不接受那些哲學，但從中學到了許多。多元主義在保守的、宗教的和反動的思想中發生重要作用。它在後現代、文化相對主義和虛無主義思想中也相對重要。為了將我的思想，與這些我大多拒絕的學派清楚地區隔開來，在此必須強調我思想中的另外三個元素。為了簡潔起見，我沒有將它們附加在上述多元主義中：
 
 1. 首先是可以被稱為「動態主義」（dynamism）或「自由主義」（liberalism）的元素，即我認為社會群體的演變對於多元主義的成功至關重要。這與保守派、許多宗教及協和（consociational）思想形成鮮明對比，在這些思想中，構成社會群體的多元性常被視為是靜態的。
 
-2. 其次是「自治」（self-government）或「民主」（democracy），即我認為多元群體需要對組成他們的個人負責，但不能把這些個人置於群體的基本意義之上，這一點是非常重要的；這與反動思想（如法西斯主義和社團主義（corporatism））形成對比，後者所意指的團體通常帶有專制、個人主義和等級結構。
+2. 其次是「自治」（self-government）或「民主」（democracy），即我認為多元群體需要對組成他們的個人負責，這點非常重要，但不能把這些個人置於群體的基本意義之上；這與反動思想（如法西斯主義和社團主義（corporatism））形成對比，後者所意指的團體通常帶有專制、個人主義和階級結構。
 
-3. 最後一個元素被稱爲「合作」（cooperation），即我們應以合作做為目標，在社會群體中為共同的目標達成大致性的一致／共識（coherence/consensus），這也與許多後現代主義、相對主義和虛無主義形成了對比。
+3. 最後是「合作」（cooperation），即我們應以合作為目標，在社會群體中為共同的目標達成大致性的一致／共識（coherence/consensus）。這與大部份的後現代主義、相對主義和虛無主義形成了對比。
 
-因此，可以說我是「合作式自由民主多元宇宙人」，但中間的兩個名詞具有相當多的含義，所以我使用了較簡潔的名詞做表示，希望這樣的補充已經足夠。[^4]
+因此，可以說我是「合作式自由民主多元宇宙人」，但中間的兩個名詞具有相當多的含義，所以我使用了較簡潔的名詞表示，希望這樣的補充已經足夠。[^4]
 
-同樣重要、需要強調的是，多元主義比大多數一元論立場（如「多數人統治」和「資本主義」）更具有容納性和定義空間。與其特質有關，它雖然沒有提供完全的制度化與設計，但卻能更加清晰地傳達出它所追求的東西。
+同樣重要、需要強調的是，多元主義比大多數一元論立場（如「多數人統治」和「資本主義」）更具有容納性，也比較難明確定義。一元論立場即使沒有完整描述制度，卻都能清晰傳達出它們所追求的目標。
 
-誠然，這可能使我所主張的立場有些模糊，或與我不想為之辯護的內容混淆，因此我希望在這篇文章的其餘部分能更加清楚的溝通、指出方向，來闡述我的意思。
+誠然，這可能使我所主張的立場有些模糊，或與我不想為之辯護的內容混淆，因此我希望在這篇文章的其餘部分，能更加清楚的溝通、指出方向，來闡述我的意思。
 
 [^4]: 我的思考在許多方面，最接近於蛻變自進步派實用主義學者的觀念（例如 Georg Simmel、John Dewey、W. E. B. Du Bois、Iris Marion Young、Deva Woodly）。然而，即便如此，這些思想家們關注的具體分歧，和美國左派們關注的與歷史不正義有關的多元主義並沒有得到我過多的關注；我更多著眼於尋找共識的正式規則，從而找出那些在歷史上被邊緣化的群體和歷史上受到眷顧的群體中，哪些分歧最值得強調。
 
