--- a/_posts/2022-02-10-為何我是多元宇宙人.md
+++ b/_posts/2022-02-10-為何我是多元宇宙人.md
@@ -160,13 +160,13 @@ cc: site.cc-by-nc-sa
 
 此外，或許大多數的多元主義哲學／制度（尤其是那些具有保守傾向的制度）會傾向於拒絕適應，只持續關注某些固定的社會群體。雖然這似乎讓我和大多數的多元論者看來不太一致，但在我看來，若多元主義要能回應上面討論的批評者，並在面對其他更有活力的社會哲學時生存下去，這與其說是一種設計考量，不如說是必要條件。
 
-因此，這些標準，儘管與其他多元主義哲學不同，但對於回答上述對多元主義提出的存在問題是必要的。
+因此，雖然適應原則與其他多元主義哲學不盡相同，但面對上述多元主義的存續問題，它是必要的回應。
 
 #### 多元制度的多元例證
 
-如此一來問題出現了，多元思維是否能支持多元制度？多元思維是否太過寬廣而不一致，以至於無法支持多元制度設計？我將試著說明爲什麼可行的原因，並展示一系列關於多元制度設計觀點的趨同性作為說明。我想從上述原則中挑出一個，即 CAD（跨越多樣性的合作），並說明多元思維如何支持它。
+如此一來問題出現了，多元思維是否能支持多元制度？多元思維是否太過寬廣而不一致，以至於無法支持多元制度設計？我將展示一系列多元制度設計觀點的趨同性，來試著說明可行的原因。我想從上述原則中挑出一個：CAD（跨越多樣性的合作），並說明多元思維如何支持它。
 
-因為這篇文章，主要是為了啟發與說服正式技術專家，因此我將把重點更多的放在形式模型上，作為結構化制度的理由／衍生的方式，而不會涉及全面的形式分析。
+因為這篇文章，主要是為了啟發與說服形式技術專家，因此我將把重點更多的放在形式模型上，作為結構化制度的理由／衍生的方式，而不會涉及全面的形式分析。
 
 我將表明，關於社會結構的高度簡化和不可信的假設（即使是典型的一元論模型和結論的最有力的提倡者也會同意這只是簡化）一旦得到拓展，就將傾向於以合理趨同化的形式支持上文討論的多元制度。為此，我將重點介紹七個案例，這些案例說明並非詳盡無遺，但希望能有代表性。
 
@@ -302,7 +302,7 @@ cc: site.cc-by-nc-sa
 
    類似的邏輯也適用於社群的激勵，即社群會誇大某些動機如：特定議題、內部團結程度和內部機構力量等等，以利於最大化該社群對該議題的代表性與權利；這種最大化代表權的激勵，會與最大化跨越差異的合作所收到的補貼激勵，相互抵消。
 
-   雖然這一切可能有些抽象、美好，但它在日常事物的參照上給予我真正的希望，期盼它在正式系統中可以發揮作用。
+   雖然這一切可能有些抽象、美好，但它在日常事物的參照上給予我真正的希望，期盼它在形式系統中可以發揮作用。
 
    例如，我們很少看到白人男子選擇試圖冒充黑人婦女，儘管「平權行動」（affirmative action）據稱將激勵這種做法。原因很簡單，白人男子的身份是其社會權力的來源，很少人願意爲了「平權行動」提供的有限利益，而放棄自身的社會權力。
 
@@ -326,7 +326,7 @@ cc: site.cc-by-nc-sa
 
    往回看，許多界定當代政治格局的最關鍵和最具變革性的時刻，都始於多元制度，這些制度在當時肯定是相當不透明的，它們的產生是透過相互競爭的團體、相互妥協接受而誕生的（例如美國憲法）。
 
-   鑑於自由民主國家的大部分公眾，都接受某種形式的多元主義（尤其是在保守派和新左派中），其他部份公眾則致力於正式規則和技術，多元宇宙可能是最合理的融合基礎，也是我們實現重大基礎社會變革的最佳希望。
+   鑑於自由民主國家的大部分公眾，都接受某種形式的多元主義（尤其是在保守派和新左派中），其他部份公眾則致力於形式規則和技術，多元宇宙可能是最合理的融合基礎，也是我們實現重大基礎社會變革的最佳希望。
 
 [^5]: 這個顧慮與系統的中心化程度緊密相關。資訊的中心化及受到隱匿的趨勢，正是經濟學家們經常擔心的激勵不匹配（incentive misalignments）問題的寫照。
 
