--- a/_posts/2022-08-02-強化全民數位韌性.md
+++ b/_posts/2022-08-02-強化全民數位韌性.md
@@ -12,7 +12,7 @@ tags:
 
 愛沙尼亞前總統 Toomas Hendrik Ilves 最近訪問台灣，出席凱達格蘭論壇，提出歐美與包括我國在內的亞洲民主國家，應組成「數位民主聯盟」。功能類似北約（NATO），但並非建立在地緣政治，而是建立在對抗威權的共同價值觀上。
 
-事實上，針對這個構想，早在2022年7月初，Ilves 總統在我主持的 TaiwanPlus 節目中，就慷慨分享了許多「如何強化數位韌性」的具體作法和重要思維。其中，包括愛沙尼亞目前已將政府重要資料，置於境外備份並隨時同步。對於各國政府的運作而言，此堪稱劃時代的嘗試。
+事實上，針對這個構想，早在 2022 年 7 月初，[Ilves 總統在我主持的 TaiwanPlus 節目中](https://www.taiwanplus.com/originals/220708010)，就慷慨分享了許多「如何強化數位韌性」的具體作法和重要思維。其中，包括愛沙尼亞目前已將政府重要資料，置於境外備份並隨時同步。對於各國政府的運作而言，此堪稱劃時代的嘗試。
 
 這套做法，源自於 2011 年的福島事件。Ilves 總統說，在得知日本政府因為災害失去了部分政府資料後，愛沙尼亞政府開始警覺，並思考該如何因應這種情形。他們除了把重要資料，實體運送到駐外國的大使館之外，也在使館內架設伺服器。Ilves 總統指出，愛沙尼亞政府為此和盧森堡政府接洽，主張這個伺服器也應視同愛沙尼亞的領土，非經許可不得進入、完全獨立，如果國內的任何重要資料有所變更，都會同步更新到大使館中的伺服器。
 
